This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php




Version 381    ????

--Moved tool tip and status message up slightly, and split warning about
  editing a Steam account onto two lines (to avoid overlapping with Tutorial
  and Services buttons).  Fixes #870




Version 379    2023-July-14

--Editor now supports importing temporary test map (so you can work on and
  tweak a test map without actually saving a scene into the scene folder).

--Finally found source of disconnect-on-death bug.  When client receives its
  own X X death message, it instantly closes the socket to the server.
  However, later code in the remainder of that client step sometimes sends
  messages to the server (in the case of FLIP, for example).  When this
  happens, the send was failing, and the disconnection signal was being raised,
  overriding the you-died signal.  Fixed by simply not sending a message
  through the socket if it's already closed.  Thanks Agne for sending a log
  catching the problem.  Fixes #852

--New Services screen accessible from login screen, which provides a
  Challenge/Hash interface for verifying your account with external services.
  External services can verify these hashes with
  http://onehouronelife.com/ticketServer/server.php?action=check_ticket_hash
  Fixes #860

--Fixed so that creation sound's initalOnly is respected for floor objects.

--Fixed bad pointer access in editor after transition deleted. 

--Fixed From Pattern and From Category labels in Transition Editor that were
  overlapping with the new transition comment field.




Server Fixes    (2023-July-14)

--Whoops, never followed up after d7e614bcf699c27aaf6526e8a360ae95023305d4 back
  in 2020.  That setting that cleared curse counts on server startup was
  supposed to be a temporary thing for one startup only.  Set it to 0 now.
  Part of #857

--Forgiveness now logged in curseLog with F.  Fixes #857
