@@ -1708,7 +1708,7 @@ void drawFrame( char inUpdate ) {
                 loginEditOverride = true;
                 
                 existingAccountPage->setStatus( "editAccountWarning", false );
-                existingAccountPage->setStatusPositiion( true );
+                existingAccountPage->setStatusPosition( true );
                 
                 currentGamePage = existingAccountPage;
                 currentGamePage->base_makeActive( true );
@@ -1944,7 +1944,7 @@ void drawFrame( char inUpdate ) {
                 
                 existingAccountPage->setStatus( "loginFailed", true );
 
-                existingAccountPage->setStatusPositiion( true );
+                existingAccountPage->setStatusPosition( true );
 
                 currentGamePage->base_makeActive( true );
                 }
@@ -1959,7 +1959,7 @@ void drawFrame( char inUpdate ) {
                 
                 existingAccountPage->setStatus( "reconnectFailed", true );
 
-                existingAccountPage->setStatusPositiion( true );
+                existingAccountPage->setStatusPosition( true );
 
                 currentGamePage->base_makeActive( true );
                 }
@@ -1974,7 +1974,7 @@ void drawFrame( char inUpdate ) {
                 
                 existingAccountPage->setStatus( "noLifeTokens", true );
 
-                existingAccountPage->setStatusPositiion( true );
+                existingAccountPage->setStatusPosition( true );
 
                 currentGamePage->base_makeActive( true );
                 }
@@ -1989,7 +1989,7 @@ void drawFrame( char inUpdate ) {
                 
                 existingAccountPage->setStatus( "connectionFailed", true );
 
-                existingAccountPage->setStatusPositiion( true );
+                existingAccountPage->setStatusPosition( true );
 
                 currentGamePage->base_makeActive( true );
                 }
@@ -2016,7 +2016,7 @@ void drawFrame( char inUpdate ) {
                 
                 delete [] message;
                 
-                existingAccountPage->setStatusPositiion( true );
+                existingAccountPage->setStatusPosition( true );
 
                 currentGamePage->base_makeActive( true );
                 }
@@ -2049,7 +2049,7 @@ void drawFrame( char inUpdate ) {
                 
                 existingAccountPage->setStatus( "serverShutdown", true );
 
-                existingAccountPage->setStatusPositiion( true );
+                existingAccountPage->setStatusPosition( true );
 
                 currentGamePage->base_makeActive( true );
                 }
@@ -2064,7 +2064,7 @@ void drawFrame( char inUpdate ) {
                 
                 existingAccountPage->setStatus( "serverUpdate", true );
 
-                existingAccountPage->setStatusPositiion( true );
+                existingAccountPage->setStatusPosition( true );
 
                 currentGamePage->base_makeActive( true );
                 }
@@ -2079,7 +2079,7 @@ void drawFrame( char inUpdate ) {
                 
                 existingAccountPage->setStatus( "serverFull", true );
 
-                existingAccountPage->setStatusPositiion( true );
+                existingAccountPage->setStatusPosition( true );
 
                 currentGamePage->base_makeActive( true );
                 }
